   * Fix "Find whole word" issue - thx OmrSi
   * Fix issue in "Find & count" with regex - thx ivandrofly
   * Fix wrong text for "split long lines" - thx Christian
   * Fix for format "KanopyHtml" "stealing" TTML - thx nathaniel1977
   * Fix exporting SSA/ASSA styles with space in name - thx sneaker_ger
   * Fix crash in TTML 1.0 saving - thx nathaniel1977


3.5.4 (2nd October 2017)
* NEW:
   * New subtitle format JacoSub - thx ivandrofly
   * New subtitle format Lamda Cap (basic support) - thx Chie
   * New subtitle format - thx Gunnar
   * New shortcuts for frame forward/back with play
   * Persian translation - thx Nima
* IMPROVED:
   * Update Spanish + Mexican + Argentinian translations - thx paconaranjo
   * Update Russian translation - thx Elheym
   * Update Brazilian translation - thx Igor
   * Update Basque translation - thx Xabier 
   * Update Korean translaton - thx domddol
   * Update Chinese Traditional translation - thx jackielam1997
   * Update Portuguese translation - thx moob
   * Improve language auto detect
   * Add "Whole word" in "Replace" window - thx OmrSi
   * Use system default font for all windows - thx sheppaul
   * Add semicolon as possible shortcut key - thx Allan
   * Add 60 fps to export settings for several formats
   * Google translate can now use google.cn (for Chinese ppl)
   * Export margins can now be percentage or pixels
   * Add more subtitle formats to command line + batch convert
   * If input file is unknown + plain text, "Import plain text" will open
   * ASS allows decimals for outline/shadow - thx Ninelpienel
   * Add "actor" to custom text export - thx mellsaid
   * Improve RTL support - thx OmrSi/darnn
   * Add "Persian" Tesseract OCR dictionary - thx NoRRt
   * Change some combo boxes to allow for better searching
   * Make "sort by" more consistant - thx Skrity
   * Add "Bridge gaps" (in durations) to "Batch convert"
   * Minor improvements for "Binary image compare" OCR - thx Boulder